# metadata-template-transformation

./: .env  README.md  etl.py  pyproject.toml
example-files/: EMSL_Metadata_Example.xlsm  Example_JGI metagenome metadata template v7.xlsx  JGI metagenome metadata template v7.xlsx  SoilExample_nmdc_sample_export.tsv  ~$EMSL_Metadata_Example.xlsm
input-files/: emsl_header.json  jgi_mg_header.json  jgi_mt_header.json
mapping-configs/: README.md  emsl.tsv  jgi.tsv  jgi_mt.tsv
