[tool.poetry]
name = "metadata-template-transformation"
version = "0.1.0"
description = ""
authors = ["Sujay Patil <sujaysanjeev.patil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
